--- a/css/main.css
+++ b/css/main.css
@@ -5,30 +5,58 @@
 }
 
 body {
+    font-size: 1.3em;
     padding-top: 10px;
     padding-left: 350px;
     padding-right: 350px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
+    height: 100px;
     margin-top: 1em;
     margin-bottom: 1em;
     padding-bottom: 1em;
     padding-top: 1em;
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    border-top: 2px solid blue;
-    border-bottom: 2px solid blue;
+    border-top: 1px solid hsl(240, 50%, 50%);
+    border-bottom: 1px solid hsl(240, 50%, 50%);
 }
 
 header {
-    flex-basis: 50%;
+    padding-left: 2em;
+    flex-basis: 60%;
     display: flex;
+    text-align: center;
+    color: hsl(240, 50%, 50%);
+}
+
+h1 {
+    font-variant: small-caps;
+    padding-right: 1em;
 }
 
 ul {
-    flex-basis: 50%;
+    flex-basis: 30%;
+    border: 2px solid red;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    list-style: none;
+}
+
+ul>li {
+    flex-basis: 8em;
+}
+
+ul>li>a {
+    text-align: center;
+}
+
+.blysk {
+    font-size: 1.3em;
+    text-transform: uppercase;
+    letter-spacing: 1.3em;
 }
