--- a/css/main.css
+++ b/css/main.css
@@ -40,19 +40,36 @@ h1 {
 }
 
 ul {
+    height: 100%;
     flex-basis: 30%;
-    border: 2px solid red;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     list-style: none;
 }
 
 ul>li {
+    height: 100%;
     flex-basis: 8em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 ul>li>a {
-    text-align: center;
+    height: 100%;
+    flex-basis: 100%;
+    color: hsl(240, 50%, 50%);
+    border-radius: 0.8em;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ul>li>a:hover {
+    background-color: hsl(240, 50%, 50%);
+    color: hsl(240, 50%, 90%);
 }
 
 .blysk {
