--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 nav {
+    flex-basis: 100%;
     height: 100px;
     margin-top: 1em;
     margin-bottom: 1em;
