--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,13 @@
 
 body {
     font-size: 1.3em;
-    padding-top: 10px;
-    padding-left: 350px;
-    padding-right: 350px;
+    display: flex;
+    justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
+    width: 1000px;
     display: flex;
     flex-wrap: wrap;
 }
