--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     width: 1000px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 nav {
@@ -82,4 +83,69 @@ ul>li>a:hover {
     font-size: 1.3em;
     text-transform: uppercase;
     letter-spacing: 1.3em;
+}
+
+main {
+    padding: 0.5em;
+    flex-basis: 60%;
+    border: 1px solid hsl(0, 100%, 50%);
+    border-radius: 1em;
+    box-shadow: 5px hsl(240, 50%, 50%);
+    display: flex;
+    flex-wrap: wrap;
+}
+
+main>form {
+    flex-basis: 55%;
+}
+
+.obrazek {
+    flex-basis: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main>p {
+    flex-basis: 100%;
+    text-align: center;
+}
+
+fieldset {
+    padding: 1em;
+}
+
+aside {
+    padding: 0.5em;
+    flex-basis: 35%;
+    border: 1px solid hsl(240, 50%, 50%);
+    border-radius: 1em;
+}
+
+aside>h2 {
+    margin: 1em;
+    font-size: 1em;
+    text-align: center;
+}
+
+aside>article {
+    text-align: justify;
+}
+
+footer {
+    margin-top: 1em;
+    padding: 2em;
+    flex-basis: 100%;
+    border: 1px solid hsl(240, 50%, 50%);
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer>h2 {
+    margin-right: 0.2em;
+    font-size: 1em;
+    letter-spacing: 0.2em;
+    color: hsl(0, 100%, 50%);
 }
