--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -25,7 +25,6 @@ nav {
     margin-bottom: 1em;
     padding-bottom: 1em;
     padding-top: 1em;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -74,7 +73,8 @@ ul>li>a {
     justify-content: center;
 }
 
-ul>li>a:hover {
+ul>li>a:hover,
+ul>li>a.active {
     background-color: hsl(240, 50%, 50%);
     color: hsl(240, 50%, 90%);
 }
@@ -88,8 +88,7 @@ ul>li>a:hover {
 main {
     padding: 0.5em;
     flex-basis: 60%;
-    border: 1px solid hsl(240, 50%, 50%);
-    box-shadow: 5px hsl(240, 50%, 50%);
+    box-shadow: 0 0 5px hsl(240, 50%, 50%);
     border-radius: 1em;
     box-shadow: 5px hsl(240, 50%, 50%);
     display: flex;
@@ -124,7 +123,7 @@ main>p {
 }
 
 fieldset {
-    border: 1px solid black;
+    border: 1px solid grey;
     padding: 0.5em;
     margin-bottom: 0.3em;
     border-left: none;
@@ -134,7 +133,7 @@ fieldset {
 }
 
 fieldset:nth-of-type(2) {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid grey;
 }
 
 label {
@@ -142,13 +141,13 @@ label {
 }
 
 input {
-    margin: 0.1em;
+    margin-left: 0.5em;
 }
 
 aside {
     padding: 0.5em;
     flex-basis: 35%;
-    border: 1px solid hsl(240, 50%, 50%);
+    box-shadow: 0 0 5px hsl(240, 50%, 50%);
     border-radius: 1em;
 }
 
